--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -241,26 +241,6 @@ h1, h2, h3, h4, h5, h6 {
 		color: #fff;
 }
 
-/*** teaching ***/
-#teaching {
-	padding: 6em 4em 3em;
-}
-
-#teaching h2 {
-	color: #595959;
-}
-
-#teaching .tag-line {
-	color: #848282;
-	font-size: 1.4em;
-}
-
-#teaching .teaching-domains {
-	height: 500px;
-	width: auto;
-	margin-top: -4em;
-}
-
 
 /*** Footer Call-to-action ***/
 #footer-cta {
@@ -327,6 +307,10 @@ h1, h2, h3, h4, h5, h6 {
 	}
 	
 	#about span {
-		font-size: 25px;
+		font-size: 20px;
+	}
+	
+	#work .work-row img {
+		margin-bottom: 10px;
 	}
 }
